[gd_scene load_steps=9 format=3 uid="uid://daqsr3qrtyk3v"]

[ext_resource type="Script" path="res://src/cards/card_info.gd" id="1_aog78"]
[ext_resource type="Texture2D" uid="uid://cbv058mhhuvcn" path="res://assets/defense_card.png" id="1_jjn8p"]
[ext_resource type="Texture2D" uid="uid://pofb034lf2kp" path="res://assets/icons/tiny_icons.png" id="2_wxkdv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ttrtl"]
atlas = ExtResource("2_wxkdv")
region = Rect2(2.08165e-12, 2.08165e-12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyf1k"]
atlas = ExtResource("2_wxkdv")
region = Rect2(10, 2.08165e-12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m8gb"]
atlas = ExtResource("2_wxkdv")
region = Rect2(20, 2.08165e-12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbyan"]
atlas = ExtResource("2_wxkdv")
region = Rect2(30, 2.08165e-12, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oxe2"]
atlas = ExtResource("2_wxkdv")
region = Rect2(2.08165e-12, 10, 10, 10)

[node name="CardInfo" type="Control"]
custom_minimum_size = Vector2(78, 120)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_aog78")

[node name="Background" type="TextureRect" parent="."]
offset_right = 130.0
offset_bottom = 200.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_jjn8p")

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 6.0
offset_right = 98.0
offset_bottom = 32.0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="RankIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = 60.0
offset_top = 6.0
offset_right = 85.0
offset_bottom = 31.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
expand_mode = 1

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 142.0
scale = Vector2(0.5, 0.5)
size_flags_vertical = 3

[node name="Description" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 71.0
offset_right = 120.0
offset_bottom = 145.0
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -3
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Stats" type="GridContainer" parent="."]
offset_left = 53.0
offset_top = 24.0
offset_right = 75.0
offset_bottom = 84.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = -5
columns = 2

[node name="HealthLabel" type="Label" parent="Stats"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HealthIcon" type="TextureRect" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_ttrtl")
stretch_mode = 2

[node name="MvmtLabel" type="Label" parent="Stats"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MvmtIcon" type="TextureRect" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_tyf1k")
stretch_mode = 2

[node name="AttLabel" type="Label" parent="Stats"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AttIcon" type="TextureRect" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_5m8gb")
stretch_mode = 2

[node name="RangeLabel" type="Label" parent="Stats"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RangeIcon" type="TextureRect" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_lbyan")
stretch_mode = 2

[node name="SpecialLabel" type="Label" parent="Stats"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = " "
horizontal_alignment = 2
vertical_alignment = 1

[node name="SpecialIcon" type="TextureRect" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_2oxe2")
stretch_mode = 2
